<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="busy"
            type="androidx.databinding.ObservableBoolean" />

        <variable
            name="weatherModel"
            type="beans.WeatherMainModel" />

        <variable
            name="dailyModel"
            type="beans.DailyData" />

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

        <import type="android.view.View" />

    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="25dp"
                    android:paddingTop="15dp"
                    android:paddingRight="25dp"
                    android:paddingBottom="15dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvTimeZone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:paddingTop="14dp"
                        android:paddingBottom="14dp"
                        android:text="@{weatherModel.timezone}"
                        android:textColor="@color/colorText4E4E4E"
                        android:textSize="30sp"
                        tools:text="Paris" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/bold"
                            android:paddingEnd="15dp"
                            android:text="@{String.valueOf(Math.round(weatherModel.currently.temperature))}"
                            android:textSize="66sp"
                            tools:text="12" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@id/tvTemp"
                            android:fontFamily="@font/bold"
                            android:paddingStart="5dp"
                            android:text="F"
                            android:textSize="60sp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvFH"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@id/tvTemp"
                            android:fontFamily="@font/bold"
                            android:text="°"
                            android:textColor="@color/colorText4E4E4E"
                            android:textSize="40sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivWeatherIcon"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="30dp"
                            android:src="#e1e1e1" />

                    </RelativeLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSummary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@{weatherModel.currently.summary}"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        tools:text="Mostly Cloudy" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvDailyTemp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/medium"
                                android:text="@string/wind"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvWindSpeed"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/medium"
                                android:text="@{String.valueOf(weatherModel.currently.windSpeed)}"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                tools:text="4.96" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/cloud"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvCloud"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/medium"
                                android:text="@{String.valueOf(weatherModel.currently.windSpeed)}"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                tools:text="4.96" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/medium"
                                android:text="@string/pressure"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvPressure"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/medium"
                                android:text="@{String.valueOf(weatherModel.currently.pressure)}"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                tools:text="4.96" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/humidText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/medium"
                                android:text="@string/humidity"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvHumid"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/medium"
                                android:text="@{String.valueOf(weatherModel.currently.humidity)}"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                tools:text="4.96" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/medium"
                                android:text="@string/sunrise"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvSunRiseTime"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/medium"
                                android:text="-"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                tools:text="4.96" />
                            <!--android:text="@{String.valueOf(dailyModel.sunriseTime)}"-->
                            <!--android:text="@{weatherModel.daily(0).sunriseTime}"-->

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/setText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/medium"
                                android:text="@string/sunset"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvSunSetTime"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/medium"
                                android:text="-"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                tools:text="4.96" />
                            <!--android:text="@{String.valueOf(dailyModel.sunsetTime)}"-->
                            <!--android:text="@{String.valueOf(weatherModel.daily(0).sunsetTime)}"-->

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/medium"
                                android:text="@string/last_updated"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvDayTime"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/medium"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                tools:text="@string/last_updated" />

                        </LinearLayout>
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btChangeCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:background="@color/colorAccent"
                        android:fontFamily="@font/bold"
                        android:onClick="@{listener.onClick}"
                        android:paddingLeft="18dp"
                        android:paddingRight="18dp"
                        android:text="@string/button"
                        android:textColor="@android:color/white" />

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="@{busy ? View.VISIBLE : View.GONE}" />

        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>